--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 apply plugin: 'kotlin-kapt'
+//apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdk 32
